resync migrate-only irekamy

--- a/angular.json
+++ b/angular.json
@@ -57,7 +57,7 @@
             "fileReplacements": [
               {
                 "replace": "./src/app/_shared/constant.service.ts",
-                "with": "./src/app/_shared/constant-aa.service.ts"
+                "with": "./src/app/_shared/constant-ireka.service.ts"
               }
             ]
           },
@@ -72,11 +72,11 @@
                 {
                   "type": "anyComponentStyle",
                   "maximumWarning": "2kB",
-                  "maximumError": "8kB"
+                  "maximumError": "6kB"
                 }
               ],
               "outputHashing": "all",
-              "serviceWorker": "ngsw-config_aa.json"
+              "serviceWorker": "ngsw-config_ireka.json"
             },
             "development": {
               "optimization": false,
