resync migrate-only localhost

--- a/angular.json
+++ b/angular.json
@@ -57,7 +57,7 @@
             "fileReplacements": [
               {
                 "replace": "./src/app/_shared/constant.service.ts",
-                "with": "./src/app/_shared/constant-leap.service.ts"
+                "with": "./src/app/_shared/constant-localhost.service.ts"
               }
             ]
           },
@@ -106,7 +106,8 @@
           "options": {
             "polyfills": [
               "zone.js",
-              "zone.js/testing"
+              "zone.js/testing",
+              "@angular/localize/init"
             ],
             "tsConfig": "tsconfig.spec.json",
             "inlineStyleLanguage": "scss",
