--- a/package.json
+++ b/package.json
@@ -33,12 +33,11 @@
     "@fullcalendar/daygrid": "^6.1.17",
     "@fullcalendar/timegrid": "^6.1.17",
     "@kolkov/angular-editor": "^3.0.0-beta.0",
-    "@ng-bootstrap/ng-bootstrap": "^19.0.0-rc.0",
+    "@ng-bootstrap/ng-bootstrap": "^19.0.1",
     "@ng-select/ng-select": "^15.1.0",
     "@popperjs/core": "^2.11.8",
     "@stomp/rx-stomp": "^2.0.0",
     "@zxing/browser": "^0.1.5",
-    "acorn": "^8.15.0",
     "bootstrap": "^5.3.6",
     "codemirror": "^6.0.1",
     "dayjs": "^1.11.11",
