--- a/.github/workflows/leapmy.yml
+++ b/.github/workflows/leapmy.yml
@@ -25,13 +25,20 @@ jobs:
       - name: Build Angular app
         run: npx ng build --configuration production
 
-      - name: Upload to LEAP server via SFTP
-        uses: appleboy/scp-action@master
+      - name: Clean remote directory (optional)
+        uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.SFTP_HOST_LEAP }}
           username: ${{ secrets.SFTP_USER_LEAP }}
           password: ${{ secrets.SFTP_PASS_LEAP }}
           script: |
             rm -rf /var/www/vhosts/leap.my/httpdocs/design/*
+
+      - name: Upload to LEAP server via SFTP
+        uses: appleboy/scp-action@master
+        with:
+          host: ${{ secrets.SFTP_HOST_LEAP }}
+          username: ${{ secrets.SFTP_USER_LEAP }}
+          password: ${{ secrets.SFTP_PASS_LEAP }}
           source: dist/design/browser/*
           target: /var/www/vhosts/leap.my/httpdocs/design/
