--- a/.github/workflows/kborneo.yml
+++ b/.github/workflows/kborneo.yml
@@ -1,6 +1,11 @@
 name: Deploy to KBORNEO Server
 
 on:
+  push:
+    branches:
+      - main
+    paths-ignore:
+      - '.github/workflows/**'
   workflow_dispatch:
 
 jobs:
