--- a/angular.json
+++ b/angular.json
@@ -56,7 +56,7 @@
             "fileReplacements": [
               {
                 "replace": "./src/app/_shared/constant.service.ts",
-                "with": "./src/app/_shared/constant-aa.service.ts"
+                "with": "./src/app/_shared/constant-devireka.service.ts"
               }
             ]
           },
@@ -71,11 +71,11 @@
                 {
                   "type": "anyComponentStyle",
                   "maximumWarning": "2kB",
-                  "maximumError": "8kB"
+                  "maximumError": "6kB"
                 }
               ],
               "outputHashing": "all",
-              "serviceWorker": "ngsw-config_aa.json"
+              "serviceWorker": "ngsw-config_devireka.json"
             },
             "development": {
               "optimization": false,
