--- a/.github/workflows/kborneo.yml
+++ b/.github/workflows/kborneo.yml
@@ -33,7 +33,9 @@ jobs:
         run: npx ng build --configuration production
 
       - name: List build output
-        run: ls -lah dist/design/browser
+        run: |
+          echo "Built files:"
+          find dist/design/browser -type f
 
       - name: Generate SHA256 checksum file
         run: |
@@ -55,9 +57,8 @@ jobs:
           host: ${{ secrets.SFTP_HOST_KBORNEO }}
           username: ${{ secrets.SFTP_USER_KBORNEO }}
           password: ${{ secrets.SFTP_PASS_KBORNEO }}
-          source: dist/design/browser/*
-          target: /var/www/vhosts/kborneo.my/httpdocs/design/
-          strip_components: 3
+          source: "dist/design/browser"
+          target: /var/www/vhosts/kborneo.my/httpdocs/design
 
       - name: Set file permissions
         uses: appleboy/ssh-action@master
@@ -68,22 +69,3 @@ jobs:
           script: |
             chmod -R 755 /var/www/vhosts/kborneo.my/httpdocs/design
             chown -R kborneo:psacln /var/www/vhosts/kborneo.my/httpdocs/design
-
-      # - name: Verify remote file integrity
-      #   uses: appleboy/ssh-action@master
-      #   with:
-      #     host: ${{ secrets.SFTP_HOST_KBORNEO }}
-      #     username: ${{ secrets.SFTP_USER_KBORNEO }}
-      #     password: ${{ secrets.SFTP_PASS_KBORNEO }}
-      #     script: |
-      #       cd /var/www/vhosts/kborneo.my/httpdocs/design
-      #       sha256sum -c sha256sum.txt || exit 1
-
-      # - name: Print remote index.html hash
-      #   uses: appleboy/ssh-action@master
-      #   with:
-      #     host: ${{ secrets.SFTP_HOST_KBORNEO }}
-      #     username: ${{ secrets.SFTP_USER_KBORNEO }}
-      #     password: ${{ secrets.SFTP_PASS_KBORNEO }}
-      #     script: |
-      #       sha256sum /var/www/vhosts/kborneo.my/httpdocs/design/index.html || echo "index.html not found"
