--- a/.github/workflows/kborneo.yml
+++ b/.github/workflows/kborneo.yml
@@ -35,18 +35,18 @@ jobs:
       - name: Clean remote directory (optional)
         uses: appleboy/ssh-action@master
         with:
-          host: ${{ secrets.SFTP_HOST_KBORNEOMY }}
-          username: ${{ secrets.SFTP_USER_KBORNEOMY }}
-          password: ${{ secrets.SFTP_PASS_KBORNEOMY }}
+          host: ${{ secrets.SFTP_HOST_KBORNEO }}
+          username: ${{ secrets.SFTP_USER_KBORNEO }}
+          password: ${{ secrets.SFTP_PASS_KBORNEO }}
           script: |
             rm -rf /var/www/vhosts/kborneo.my/design/*
 
       - name: Upload to KBORNEO server via SFTP
         uses: appleboy/scp-action@master
         with:
-          host: ${{ secrets.SFTP_HOST_KBORNEOMY }}
-          username: ${{ secrets.SFTP_USER_KBORNEOMY }}
-          password: ${{ secrets.SFTP_PASS_KBORNEOMY }}
+          host: ${{ secrets.SFTP_HOST_KBORNEO }}
+          username: ${{ secrets.SFTP_USER_KBORNEO }}
+          password: ${{ secrets.SFTP_PASS_KBORNEO }}
           source: dist/design/browser/*
           target: /var/www/vhosts/kborneo.my/design/
           strip_components: 3
@@ -54,9 +54,9 @@ jobs:
       - name: Set file permissions
         uses: appleboy/ssh-action@master
         with:
-          host: ${{ secrets.SFTP_HOST_KBORNEOMY }}
-          username: ${{ secrets.SFTP_USER_KBORNEOMY }}
-          password: ${{ secrets.SFTP_PASS_KBORNEOMY }}
+          host: ${{ secrets.SFTP_HOST_KBORNEO }}
+          username: ${{ secrets.SFTP_USER_KBORNEO }}
+          password: ${{ secrets.SFTP_PASS_KBORNEO }}
           script: |
             chmod -R 755 /var/www/vhosts/kborneo.my/design
             chown -R aw.sarawakskills.edu._kjbgd64pw1:psacln /var/www/vhosts/kborneo.my/design
